#97457 - Update aria-label

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -92,3 +92,5 @@ incl.,incl.
 "This field value must be the same as ""%0"".","This field value must be the same as ""%0""."
 "Subscribe newsletter","Subscribe newsletter"
 "Newsletter Email Address","Newsletter Email Address"
+"Hyva twitter profile","Hyva twitter profile"
+"opens in new window","opens in new window"
